Draft in progess

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+<app-toolbar title="Welcome to Doom"></app-toolbar>
+
 <button mat-flat-button color="primary" (click)="metamask()">Metamask</button>
 
 @if(signer()) {
