--- a/src/app/strategy/dialog/dialog.component.html
+++ b/src/app/strategy/dialog/dialog.component.html
@@ -16,14 +16,14 @@
 
       <mat-form-field>
         <mat-label>Buy min</mat-label>
-        <input matInput type="number" formControlName="buyMin">
+        <input matInput type="number" formControlName="buyMin" min="0">
         @if( form.get('buyMin')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         }
       </mat-form-field>
       <mat-form-field>
         <mat-label>Buy max</mat-label>
-        <input matInput type="number" formControlName="buyMax" [errorStateMatcher]="buyMaxMatcher">
+        <input matInput type="number" formControlName="buyMax" [errorStateMatcher]="buyMaxMatcher" min="0">
         @if(form.get('buyMax')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         } @else if (form.hasError('buyMin')) {
@@ -32,7 +32,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Buy budget</mat-label>
-        <input matInput type="number" formControlName="buyBudget">
+        <input matInput type="number" formControlName="buyBudget" min="0">
         @if( form.get('buyBudget')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         }
@@ -55,7 +55,7 @@
 
       <mat-form-field>
         <mat-label>Sell min</mat-label>
-        <input matInput type="number" formControlName="sellMin" [errorStateMatcher]="sellMinMatcher">
+        <input matInput type="number" formControlName="sellMin" [errorStateMatcher]="sellMinMatcher" min="0">
         @if( form.get('sellMin')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         } @else if (form.hasError('buyMax')) {
@@ -64,7 +64,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Sell max</mat-label>
-        <input matInput type="number" formControlName="sellMax" [errorStateMatcher]="sellMaxMatcher">
+        <input matInput type="number" formControlName="sellMax" [errorStateMatcher]="sellMaxMatcher" min="0">
         @if( form.get('sellMax')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         } @else if (form.hasError('sellMin')) {
@@ -73,7 +73,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Sell budget</mat-label>
-        <input matInput type="number" formControlName="sellBudget">
+        <input matInput type="number" formControlName="sellBudget" min="0">
         @if( form.get('sellBudget')?.hasError('minRequired')) {
         <mat-error>value required > 0</mat-error>
         }
