--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
           </header>
           <p>Buy: {{strategy.buyPriceLow}} min / {{strategy.buyPriceHigh}} max</p>
           <p>Sell: {{strategy.sellPriceLow}} min / {{strategy.sellPriceHigh}} max</p>
-          <p>Budget: {{strategy.buyBudget}} buy / {{strategy.sellBudget}} sell</p>
+          <p>Budget: {{strategy.sellBudget}} sell / {{strategy.buyBudget}} buy </p>
         </div>
       }
     </section>
