--- a/src/app/strategy/landing/strategy.component.html
+++ b/src/app/strategy/landing/strategy.component.html
@@ -23,7 +23,7 @@
     </header>
     <p>Buy: {{strategy.buyMin}} min / {{strategy.buyMax}} max</p>
     <p>Sell: {{strategy.sellMin}} min / {{strategy.sellMax}} max</p>
-    <p>Budget: {{strategy.buyBudget}} buy / {{strategy.sellBudget}} sell</p>
+    <p>Budget: {{strategy.sellBudget}} sell / {{strategy.buyBudget}} buy </p>
   </div>
   }
 
